[package]
name = "rongcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
log = "0.4"
serde_repr = "0.1.20"

[dev-dependencies]
mockito = "1.0"

